2010-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: Converted to new API

2010-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp: Converted to new API

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Yet more simplification from "new" Rcpp API
	* R/calendars.R: Simpler too as we get simpler result objects back

2010-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: More code simplification using "new" Rcpp API

	* src/utils.cpp: Add Brazil + South Korea to getCalendar()
	* src/calendars.cpp: Move getCalendar() into this file

2010-06-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Simplified code by using more of Rcpp's new API
	* DESCRIPTION: Encode "Rcpp (>= 0.8.2.2)" aka current SVN

	* DESCRIPTION: Switch to 'LinkingTo: Rcpp'
	* configure.in: No longer need CxxFlags for Rcpp thanks to LinkingTo
	* src/Makefile.win: Idem

2010-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* man/DiscountCurve.Rd: Uncomment futures entries as there are
	numerical issues (in QuantLib) with the spline curve fit when present

2010-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/*.cpp: Suppress a few g++ warnings

	* src/calendar.cpp: Added South Korea and Brazil

2010-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runitOptions.R: Updated binary option test

2010-04-05  Khanh Nguyen  <knguyen@cs.umb.edu>

	* R/hullWhiteCalibration.R: added Hull-White calibration
	* src/hullwhite.cpp: added Hull-White calibration

2010-02-12  Khanh Nguyen  <knguyen@cs.umb.edu>

	* R/*,src/*: Remove some deprecated fixed income code
	* tests/*: Remove corresponding tests

2010-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Some small cleanups

2010-01-22  Khanh Nguyen <knguyen@cs.umb.edu>

	* NAMESPACE: Added, filled with functions and methods

	* R/*Bond.R: add default values to bond functions, especially the date
	parameters (dayCounter, settlement days, compounding frequency,..)